# clawfs

./: .dockerignore  .gitignore  AGENTS.md  CSI_SETUP.md  Cargo.toml  Dockerfile  README.md  ROUTING.md  ship.sh
.beads/: config.yaml
.claude/: settings.local.json
.githooks/: pre-commit  pre-push  pre-push.disabled
.github/: .pjdfstest-exclude
.github/workflows/: kernel-compile.yml  perf-reports-pages.yml  pjdfstest.yml  preload-exercise.yml  release.yml  rust.yml  stress-e2e.yml  stress-ng.yml  xfstests.yml
bench-artifacts/: perf_guard_baseline.json  summary.md
bench-artifacts/fsync-confidence/: verified_lift_summary.md
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/flush_metadata_batch_latency/base/: estimates.json  tukey.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/flush_metadata_batch_latency/change/: estimates.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/flush_metadata_batch_latency/new/: sample.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/flush_metadata_batch_latency/report/: index.html
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/inline_resize_strategy_benchmark/base/: estimates.json  sample.json  tukey.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/inline_resize_strategy_benchmark/change/: estimates.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/inline_resize_strategy_benchmark/report/: index.html
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/inode_clone_directory_heavy/base/: estimates.json  sample.json  tukey.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/inode_clone_directory_heavy/change/: estimates.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/inode_clone_directory_heavy/report/: index.html
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/journal_write_throughput/base/: benchmark.json  estimates.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/journal_write_throughput/change/: estimates.json
bench-artifacts/perf_guard_graphs/20260228-536cb/perf_local/journal_write_throughput/new/: sample.json  tukey.json
bench-artifacts/perf_guard_graphs/20260228-536cb/report/: index.html
bench-artifacts/perf_guard_graphs/20260228-c5c50/perf_local/journal_write_throughput/base/: tukey.json  (+2 more)
bench-artifacts/perf_guard_graphs/20260304-66eb5/report/: index.html
bench-artifacts/perf_guard_graphs/20260325-64240/preload/report/: index.html
bench-artifacts/perf_guard_graphs/20260404-1920b/preload/report/: index.html
bench-artifacts/perf_guard_graphs/20260404-1920b/report/: index.html
bench-artifacts/perf_guard_graphs/20260410-10f9c/report/: index.html
benches/: bench_hosted.rs  hosted.rs  perf_local_criterion.rs
charts/clawfs/: Chart.yaml  QUICKSTART.md  values.yaml
charts/clawfs/templates/: _helpers.tpl  csi-daemonset.yaml  csi-rbac.yaml  csi-serviceaccount.yaml  storageclass.yaml
clawfs-nfs-gateway/: Cargo.toml
clawfs-nfs-gateway/src/: main.rs
clawfs-preload/: Cargo.toml
clawfs-preload/src/: cwd.rs  dispatch.rs  errno.rs  fd_table.rs  inotify.rs  intercept.rs  lib.rs  prefix.rs  runtime.rs
clawfs-preload/tests/: integration.rs
clawfs-wasm-demo/: Cargo.toml
clawfs-wasm-demo/src/: lib.rs
crates/clawfs-core/: Cargo.toml
crates/clawfs-core/src/: lib.rs
crates/clawfs-csi/: .gitignore  Cargo.toml  Dockerfile  README.md
crates/clawfs-csi/proto/: csi.proto
crates/clawfs-csi/src/: identity.rs  lib.rs  main.rs  node.rs
crates/clawfs-private/: Cargo.toml
crates/clawfs-private/src/: lib.rs
docker/: Dockerfile  hosted-accelerator-entrypoint.sh
docs/: CLEANUP_AGENT.md  FIO_OPTIMIZATION_NOTES.md  clawfs-hosted-accelerator-codex.md  clawfs-project-reference.md  clawfs-shared-library-design.md  clawfs-sprites.md  clawfs-storage-modes.md  clawfs-testing-and-operations.md  hosted-accelerator-gemini.md  hosted-accelerator-runbook.md  osagefs-project-reference.md  osagefs-sprites.md  osagefs-testing-and-operations.md
fuser-mt/: Cargo.toml
fuser-mt/src/: channel.rs  lib.rs  request.rs  session.rs
loopback-bench/: Cargo.toml
loopback-bench/src/: main.rs
osagefs-nfs-gateway/: Cargo.toml
osagefs-nfs-gateway/src/: main.rs
scripts/: aggregate_perf_metrics.py  analyze_perf_log.py  build-wasm-demo.sh  check_perf_guard.py  checkpoint.sh  cleanup.sh  cleanup_all_sprites.sh  common.sh  demo_common_crawl_mount.sh  fio_workloads.sh  install_xfstests_mount_helper.sh  linux_kernel_perf.sh  metadata_consistency_e2e.py  metadata_consistency_e2e.sh  micro_workflows.sh  mount.fuse.clawfs  patch_xfstests_for_clawfs.sh  perf_guard.sh  preload_exercise.sh  profile_daemon.sh  replay_stress.sh  repro_stress_ng_ci.sh  run_clawfs.sh  run_nfs_gateway.sh  run_osagefs.sh  run_pjdfstest.sh  sprite_perf_loop.sh  sprite_validate_parallel.sh  stress_e2e.sh  test
src/: auth.rs  checkpoint.rs  clawfs.rs  codec.rs  compat.rs  config.rs  config_shared_macros.rs  coordination.rs  frontdoor.rs  fs.rs  hosted_cache.rs  inode.rs  journal.rs  launch.rs  lib.rs  main.rs  maintenance.rs  maintenance_shared.inc.rs  maintenance_shared.rs  metadata.rs  nfs_mount.rs  org_policy.rs  org_registry.rs  perf.rs  perf_bench.rs  refreshable_store.rs  relay.rs  replay.rs  segment.rs  source.rs  state.rs  superblock.rs  telemetry.rs
src/fs/: core.rs  core_shared.inc.rs  flush.rs  fuse.rs  mod.rs  nfs.rs  ops.rs  write_path.rs
src/fs/tests/: mod.rs
tests/: integration_failure.rs  integration_hosted.rs  integration_org_scoped.rs  perf_local.rs  relay_writeback_integration.rs
tests/artifacts/perf/20260626T201655Z-a65ea59/: BASELINE.md  BUDGETS.md  DEFINE.md  HANDOFF.md  fingerprint.json  golden_checksums.txt  hotspot_table.md  hypothesis.md  scaling_law.md  tuning.json
tests/common/: mod.rs
website/clawfs.dev/: AGENTS.md  auth.html  demo.html  demo.js  enterprise.html  faq.html  getting-started.html  index.html  install.ps1  install.sh  main.js  pricing.html  privacy.html  styles.css  terms.html
website/osagefs.org/: index.html  main.js  styles.css
(+472 files in other folders)
