[package]
name = "osagefs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
fuser = { version = "0.14", default-features = false, features = ["abi-7-31"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync"] }
slatedb = "0.9"
futures = "0.3"
libc = "0.2"
object_store = { version = "0.12", default-features = false, features = ["aws", "gcp"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
