[package]
name = "osagefs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fuser = { version = "0.14", default-features = false, features = ["abi-7-31"] }
flate2 = "1.0"
libc = "0.2"
log = "0.4"
object_store = { version = "0.12", default-features = false, features = ["aws", "gcp", "fs"] }
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flexbuffers = "2"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
chacha20poly1305 = "0.10"
lz4_flex = "0.11"
sha2 = "0.10"

[dev-dependencies]
