[package]
name = "clawfs"
version = "0.2.9"
edition = "2024"

[workspace]
members = [".", "clawfs-preload", "clawfs-nfs-gateway"]
default-members = [".", "clawfs-preload"]

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
fuser = { path = "fuser-mt", default-features = false, features = ["abi-7-31"], optional = true }
flate2 = "1.0"
libc = "0.2"
log = "0.4"
object_store = { version = "0.12", features = ["aws", "gcp", "fs"] }
parking_lot = { version = "0.12", features = ["arc_lock"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
flatbuffers = "24.3"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "signal"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
chacha20poly1305 = "0.10"
lz4_flex = "0.11"
sha2 = "0.10"
futures = "0.3.32"
lru = "0.12"
dashmap = "6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
axum = { version = "0.8", features = ["json"] }
bincode = "1.3"
jsonwebtoken = "9"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "perf_local_criterion"
harness = false

[[bench]]
name = "bench_hosted"
harness = false

[[bench]]
name = "hosted"
harness = false

[profile.release]
debug = true
lto = "thin"
codegen-units =1
