[package]
name = "clawfs-preload"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
clawfs = { path = ".." }
ctor = "0.4"
dashmap = "6"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"
