[package]
name = "osagefs-nfs-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
osagefs = { path = ".." }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "fs", "signal", "process"] }
nfsserve = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5"
tempfile = "3"
