[package]
name = "clawfs-csi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "signal", "fs", "net"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tokio-stream = "0.1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
